# Chess-game

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: AIEngine.cpp  AIEngine.h  BasePiece.h  Bishop.cpp  Bishop.h  ChessBoard.cpp  ChessBoard.h  DragHandler.cpp  DragHandler.h  Game.cpp  Game.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  StockfishAI.cpp  StockfishAI.h  UIManager.cpp  UIManager.h  main.cpp
